--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   # Google Maps dependency
   google_maps_flutter:
 
+  #http request and response plugin
+  http: 0.12.0+2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
